crates/cadenza-compiler/test-data/semantics/compound-types-error-missing-field.expected
error: field not found
 --> test.cdz:2:7
  |
2 | point.z
  |       ^ field `z` does not exist
  |
  = help: available fields are: x, y